# motiondetector

./: CMakeLists.txt  MotionDetector.py  README.md  build.sh  motiondetector.cpp
